# ZapID

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/release/: app-release.apk  output.json
app/scripts/: blockletter.py
app/src/androidTest/java/tech/zapid/zapid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/tech/zapid/zapid/: DisplayActivity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  invalid_screen.xml  valid_screen.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/src/test/java/tech/zapid/zapid/: ExampleUnitTest.java
blockletter/: build.gradle
blockletter/src/main/java/tech/zapid/blockletter/: BlockLetter.java
core/: CMakeLists.txt
core/bind/nodejs/: binding.gyp  zapidcore_node.cpp
core/include/core/: baseencoder.hpp  blockletter.hpp  datatypes.hpp  encoder.hpp  version0.hpp
core/src/: CMakeLists.txt  baseencoder.cpp  blockletter.cpp  coreconfig.h.in  datatypes.cpp  encoder.cpp  version0.cpp
core/test/: CMakeLists.txt  test_blockletter_encoding.cpp  test_blockletter_matrix.cpp  test_chars_utilities.cpp  test_encoders.cpp
data/: DemoOrderSheet.csv  DemoOrderSheet.tsv  DemoOrderSheet2.csv
docs/: versioning.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: batchread.py  blockletter.py  passgen.py  zapidprint.py
server/test/: test_native_matrix.js
web/: components.js  idbuilder.css  idbuilder.html  idbuilder.js  util.js
zaputil/: build.gradle
zaputil/src/main/java/tech/zapid/zaputil/: BatchID.java  BiMap.java  BlockLetter.java  CSVUtils.java  CipherMap.java  IDEncoder.java  IDEncoderVer0.java  InvalidIDCodeException.java  Util.java  ZapIDPassGenerator.java
zaputil/src/test/java/: TestBlockLetter.java
